# DocuMind

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: .env.example  auth_db.py  document_processor.py  vector_store.py
